[package]
name = "jobst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.14"
etcd-client = "0.10"
tokio = { version = "1.21.2", features = ["full"] }
lazy_static = "1.4.0"
