[package]
name = "jobst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.14"
etcd-client = "0.9.2"
tokio = { version = "1.21.2", features = ["full"] }
lazy_static = "1.4.0"
actix-web = "4.2.1"
env_logger = "0.9.1"
log = "0.4"
simple-log = "1.5.1"
serde_json = "1"
futures = "0.3.25"
async-trait = "0.1.58"
serde_bytes = "0.11.7"
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

